# Denied-Process-Automation

./: analyze_process.py  config.py  get_atf.py  get_denied.py  get_ementa_html.py  get_html_parecer.py  get_indeferidos.py  get_reason.py  pyproject.toml  read_atf.py  save_atf.py  save_pdf.py  save_reason.py  test.py  text_extract.py
