[project]
name = "indeferidos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
]
